--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "mongoose": "^6.8.2",
     "multer": "^1.4.5-lts.1",
     "react-router-dom": "^6.6.1"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
